Bug 1165558 - Return valid dispositions even if there wasn't a header. r=bz